--- a/languages/send-chat-tools-ja.po
+++ b/languages/send-chat-tools-ja.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-05-26 14:14+0900\n"
-"PO-Revision-Date: 2021-05-26 14:24+0900\n"
+"POT-Creation-Date: 2021-05-28 22:04+0900\n"
+"PO-Revision-Date: 2021-05-28 22:05+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -16,97 +16,121 @@ msgstr ""
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: vendor\n"
 
-#: class/class-sct-settings-page.php:34 class/class-sct-settings-page.php:35
-msgid "Send Chat Tools"
-msgstr "Send Chat Tools"
-
-#: class/class-sct-settings-page.php:48
-msgid "Settings"
-msgstr "設定"
-
-#: class/class-sct-settings-page.php:58
-msgid "You have no sufficient permissions to access this page."
-msgstr "このページにアクセスするための十分な権限がありません。"
-
-#: class/class-sct-settings-page.php:95
-msgid "Your update has been successfully completed!!"
-msgstr "設定が完了しました！"
-
-#: class/class-sct-settings-page.php:99
-msgid "An error has occurred. Please try again."
-msgstr "エラーが発生しました。もう一度やり直してください。"
-
-#: class/class-sct-settings-page.php:103
-msgid "Send Chat Tools Settings"
-msgstr "Send Chat Tools設定"
-
-#: class/class-sct-settings-page.php:104
-msgid "Slack"
-msgstr "Slack"
-
-#: class/class-sct-settings-page.php:112
-msgid "Use Slack"
-msgstr "Slackを使用"
-
-#: class/class-sct-settings-page.php:120
-msgid "Webhook URL"
-msgstr "Webhook URL"
-
-#: class/class-sct-settings-page.php:123
-msgid "Input Slack Webhook URL"
-msgstr "SlackのWebhook URLを入力"
-
-#: class/class-sct-settings-page.php:128
-msgid "Don't send self comment"
-msgstr "自分自身のコメントを送信しない"
-
-#: class/class-sct-settings-page.php:137
-msgid "Save Changes"
-msgstr "変更を保存"
-
-#: class/class-sct-slack.php:40
+#: class/class-sct-chatwork.php:42 class/class-sct-slack.php:40
 msgid "Approved"
 msgstr "承認済み"
 
-#: class/class-sct-slack.php:42
+#: class/class-sct-chatwork.php:44 class/class-sct-slack.php:42
 msgid "Unapproved"
 msgstr "未承認"
 
-#: class/class-sct-slack.php:42
+#: class/class-sct-chatwork.php:44 class/class-sct-slack.php:42
 msgid "Click here to approve"
 msgstr "ここをクリックして承認"
 
-#: class/class-sct-slack.php:44
+#: class/class-sct-chatwork.php:46 class/class-sct-slack.php:44
 msgid "Spam"
 msgstr "スパム"
 
-#: class/class-sct-slack.php:49
+#: class/class-sct-chatwork.php:51 class/class-sct-slack.php:49
 msgid "new comment has been posted."
 msgstr "に新規コメントが投稿されました。"
 
-#: class/class-sct-slack.php:50
+#: class/class-sct-chatwork.php:52 class/class-sct-slack.php:50
 msgid "Commented article:"
 msgstr "コメントされた記事："
 
-#: class/class-sct-slack.php:51
+#: class/class-sct-chatwork.php:53 class/class-sct-slack.php:51
 msgid "Author:"
 msgstr "投稿者名："
 
-#: class/class-sct-slack.php:52
+#: class/class-sct-chatwork.php:54 class/class-sct-slack.php:52
 msgid "Date and time:"
 msgstr "日時："
 
-#: class/class-sct-slack.php:53
+#: class/class-sct-chatwork.php:55 class/class-sct-slack.php:53
 msgid "Text:"
 msgstr "本文："
 
-#: class/class-sct-slack.php:54
+#: class/class-sct-chatwork.php:56 class/class-sct-slack.php:54
 msgid "Comment URL:"
 msgstr "コメントのURL："
 
-#: class/class-sct-slack.php:55
+#: class/class-sct-chatwork.php:58 class/class-sct-slack.php:55
 msgid "Comment Status:"
 msgstr "コメントの状態："
+
+#: class/class-sct-settings-page.php:35 class/class-sct-settings-page.php:36
+msgid "Send Chat Tools"
+msgstr "Send Chat Tools"
+
+#: class/class-sct-settings-page.php:49
+msgid "Settings"
+msgstr "設定"
+
+#: class/class-sct-settings-page.php:66
+msgid "You have no sufficient permissions to access this page."
+msgstr "このページにアクセスするための十分な権限がありません。"
+
+#: class/class-sct-settings-page.php:132
+msgid "Your update has been successfully completed!!"
+msgstr "設定が完了しました！"
+
+#: class/class-sct-settings-page.php:136
+msgid "An error has occurred. Please try again."
+msgstr "エラーが発生しました。もう一度やり直してください。"
+
+#: class/class-sct-settings-page.php:140
+msgid "Send Chat Tools Settings"
+msgstr "Send Chat Tools設定"
+
+#: class/class-sct-settings-page.php:145
+msgid "Slack"
+msgstr "Slack"
+
+#: class/class-sct-settings-page.php:150
+msgid "Use Slack"
+msgstr "Slackを使用"
+
+#: class/class-sct-settings-page.php:158
+msgid "Webhook URL"
+msgstr "Webhook URL"
+
+#: class/class-sct-settings-page.php:161
+msgid "Input Slack Webhook URL"
+msgstr "SlackのWebhook URLを入力"
+
+#: class/class-sct-settings-page.php:166 class/class-sct-settings-page.php:205
+msgid "Don't send self comment"
+msgstr "自分自身のコメントを送信しない"
+
+#: class/class-sct-settings-page.php:176
+msgid "Chatwork"
+msgstr "Chatwork"
+
+#: class/class-sct-settings-page.php:181
+msgid "Use Chatwork"
+msgstr "Chatworkを使用"
+
+#: class/class-sct-settings-page.php:189
+msgid "API Token"
+msgstr "APIトークン"
+
+#: class/class-sct-settings-page.php:192
+msgid "Input Chatwork API Token"
+msgstr "ChatworkのAPIトークンを入力"
+
+#: class/class-sct-settings-page.php:197
+msgid "Room ID"
+msgstr "ルームID"
+
+#: class/class-sct-settings-page.php:200
+msgid "Input Chatwork room ID"
+msgstr "ChatworkのルームIDを入力"
+
+#: class/class-sct-settings-page.php:215
+msgid "Save Changes"
+msgstr "変更を保存"
 
 #: modules/cancel-activate.php:23
 msgid ""
