--- a/languages/send-chat-tools-ja.po
+++ b/languages/send-chat-tools-ja.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-05-28 22:04+0900\n"
-"PO-Revision-Date: 2021-05-28 22:05+0900\n"
+"POT-Creation-Date: 2021-05-28 22:50+0900\n"
+"PO-Revision-Date: 2021-05-28 22:53+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -100,35 +100,71 @@ msgstr "Webhook URL"
 msgid "Input Slack Webhook URL"
 msgstr "SlackのWebhook URLを入力"
 
-#: class/class-sct-settings-page.php:166 class/class-sct-settings-page.php:205
+#: class/class-sct-settings-page.php:162
+msgid "Get the webhook URL from the Slack API."
+msgstr "Slack APIでWebhook URLを取得してください。"
+
+#: class/class-sct-settings-page.php:163
+msgid ""
+"The URL is usually in https://hooks.slack.com/services/XXXXX/XXXXX format."
+msgstr "通常https://hooks.slack.com/services/XXXXX/XXXXX形式のURLです。"
+
+#: class/class-sct-settings-page.php:165
+msgid "Explanation of getting the Slack Webhook URL:"
+msgstr "Slack Webhook URLの取得解説："
+
+#: class/class-sct-settings-page.php:166
+msgid ""
+"Steps to add a Slack Webhook URL to Send Chat Tools | L'7 Records(Japanese "
+"Only)"
+msgstr "Send Chat ToolsにSlack Webhook URLを追加する手順 | L’7 Records"
+
+#: class/class-sct-settings-page.php:172 class/class-sct-settings-page.php:215
 msgid "Don't send self comment"
 msgstr "自分自身のコメントを送信しない"
 
-#: class/class-sct-settings-page.php:176
+#: class/class-sct-settings-page.php:182
 msgid "Chatwork"
 msgstr "Chatwork"
 
-#: class/class-sct-settings-page.php:181
+#: class/class-sct-settings-page.php:187
 msgid "Use Chatwork"
 msgstr "Chatworkを使用"
 
-#: class/class-sct-settings-page.php:189
+#: class/class-sct-settings-page.php:195
 msgid "API Token"
 msgstr "APIトークン"
 
-#: class/class-sct-settings-page.php:192
+#: class/class-sct-settings-page.php:198
 msgid "Input Chatwork API Token"
 msgstr "ChatworkのAPIトークンを入力"
 
-#: class/class-sct-settings-page.php:197
+#: class/class-sct-settings-page.php:199
+msgid "Get the API Toke from the Chatwork."
+msgstr "ChatworkでAPIトークンを取得してください。"
+
+#: class/class-sct-settings-page.php:200
+msgid "It is usually random alphanumeric."
+msgstr "通常ランダムな英数字です。"
+
+#: class/class-sct-settings-page.php:205
 msgid "Room ID"
 msgstr "ルームID"
 
-#: class/class-sct-settings-page.php:200
+#: class/class-sct-settings-page.php:208
 msgid "Input Chatwork room ID"
 msgstr "ChatworkのルームIDを入力"
 
-#: class/class-sct-settings-page.php:215
+#: class/class-sct-settings-page.php:209
+msgid "Get the Room ID from the Chatwork chat URL."
+msgstr "ChatworkのURLに含まれるルームIDを取得してください。"
+
+#: class/class-sct-settings-page.php:210
+msgid ""
+"The number after \"rid\" in the URL of the chat page you want to receive."
+msgstr "受信したいチャットページのURLに含まれる”rid”以降の数字です。"
+
+#: class/class-sct-settings-page.php:225
 msgid "Save Changes"
 msgstr "変更を保存"
 
