--- a/languages/send-chat-tools-ja-sct-admin-page.json
+++ b/languages/send-chat-tools-ja-sct-admin-page.json
@@ -5,7 +5,8 @@
 		"": { "domain": "send-chat-tools" },
 		"Sent a test message.": ["テストメッセージを送信しました。"],
 		"Could not connect.": ["接続できませんでした。"],
-		"There is no URL format.": ["URLの形式が正しくありません。"]
+		"There is no URL format.": ["URLの形式が正しくありません。"],
+		"Not an appropriate value.": ["適切な値ではありません。"]
 	  }
 	}
   }
