--- a/languages/js/send-chat-tools-ja.pot
+++ b/languages/js/send-chat-tools-ja.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2023-04-29T03:46:18+00:00\n"
+"POT-Creation-Date: 2023-04-29T04:04:34+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.7.1\n"
 "X-Domain: send-chat-tools\n"
@@ -104,7 +104,7 @@ msgid "API system value is incorrect."
 msgstr ""
 
 #: build/index.js:248
-msgid "Communication logs."
+msgid "Communication logs"
 msgstr ""
 
 #: build/index.js:256
@@ -152,7 +152,7 @@ msgid "Set time to check for Rinker exists items"
 msgstr ""
 
 #: build/index.js:559
-msgid "Rinker items will be checked on first access after this time."
+msgid "Time to send Rinker end-of-sale notifications"
 msgstr ""
 
 #: build/index.js:565
@@ -188,15 +188,15 @@ msgid "Export CSV"
 msgstr ""
 
 #: build/index.js:945
-msgid "Copied!"
+msgid "Copied"
 msgstr ""
 
 #: build/index.js:1005
-msgid "Success."
+msgid "Success"
 msgstr ""
 
 #: build/index.js:1008
-msgid "Error."
+msgid "Error"
 msgstr ""
 
 #: build/index.js:1057
