--- a/languages/js/send-chat-tools-ja.pot
+++ b/languages/js/send-chat-tools-ja.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2023-04-29T04:04:34+00:00\n"
+"POT-Creation-Date: 2023-04-29T04:10:25+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.7.1\n"
 "X-Domain: send-chat-tools\n"
@@ -144,7 +144,7 @@ msgid "Set time to check for updates"
 msgstr ""
 
 #: build/index.js:551
-msgid "Updates will be confirmed on the first access made after this time."
+msgid "Time to send Updates notifications"
 msgstr ""
 
 #: build/index.js:557
