refs #527 fix Author -> Commenter translation

--- a/languages/js/send-chat-tools-ja.pot
+++ b/languages/js/send-chat-tools-ja.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2023-04-29T04:44:35+00:00\n"
+"POT-Creation-Date: 2023-04-29T05:21:30+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.7.1\n"
 "X-Domain: send-chat-tools\n"
@@ -65,7 +65,7 @@ msgid "Last three cases"
 msgstr ""
 
 #: build/index.js:89
-msgid "Comment Author"
+msgid "Commenter"
 msgstr ""
 
 #: build/index.js:97
@@ -83,7 +83,8 @@ msgid "Date"
 msgstr ""
 
 #: build/index.js:232
-msgid "Response OK!"
+#: build/index.js:1015
+msgid "Success"
 msgstr ""
 
 #: build/index.js:234
@@ -197,10 +198,6 @@ msgstr ""
 
 #: build/index.js:955
 msgid "Copied"
-msgstr ""
-
-#: build/index.js:1015
-msgid "Success"
 msgstr ""
 
 #: build/index.js:1018
